Fix z-index of arrows

--- a/src/static/stylesheets/gallery.scss
+++ b/src/static/stylesheets/gallery.scss
@@ -199,6 +199,7 @@
       cursor: pointer;
       transition: opacity 0.35s ease-out;
       height: max-content;
+      z-index: 0;
 
       svg {
         height: 14px;
